[gd_scene load_steps=6 format=2]

[ext_resource path="res://Scripts/Character_Scripts/Character.gd" type="Script" id=1]
[ext_resource path="res://Assets/player.png" type="Texture" id=2]
[ext_resource path="res://Assets/Characters/Arnor_Portrait.png" type="Texture" id=3]
[ext_resource path="res://Assets/Fonts/character_info_font.tres" type="DynamicFont" id=4]

[sub_resource type="CapsuleShape2D" id=1]
radius = 60.0
height = 128.0

[node name="Character" type="Node2D"]
scale = Vector2( 0.5, 0.5 )
script = ExtResource( 1 )

[node name="Character_Sprite" type="Sprite" parent="."]
texture = ExtResource( 2 )
offset = Vector2( 0, -96 )

[node name="Movement_Tween" type="Tween" parent="."]

[node name="Character_Kinematic_Body" type="KinematicBody2D" parent="."]
input_pickable = true

[node name="Character_Collision_Shape" type="CollisionShape2D" parent="Character_Kinematic_Body"]
position = Vector2( 0, -96 )
shape = SubResource( 1 )

[node name="Character_Info" type="HBoxContainer" parent="."]
margin_left = -300.0
margin_top = -450.0
margin_right = 300.0
margin_bottom = -250.0
rect_min_size = Vector2( 250, 60 )
rect_pivot_offset = Vector2( 300, 200 )

[node name="Icon" type="TextureRect" parent="Character_Info"]
margin_right = 200.0
margin_bottom = 200.0
rect_min_size = Vector2( 200, 200 )
size_flags_horizontal = 4
size_flags_vertical = 4
texture = ExtResource( 3 )

[node name="Character_Stats" type="VBoxContainer" parent="Character_Info"]
margin_left = 204.0
margin_right = 600.0
margin_bottom = 200.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Name" type="Label" parent="Character_Info/Character_Stats"]
margin_right = 396.0
margin_bottom = 98.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_fonts/font = ExtResource( 4 )
text = "Character Name"
valign = 1

[node name="Heatlh" type="ProgressBar" parent="Character_Info/Character_Stats"]
margin_top = 102.0
margin_right = 396.0
margin_bottom = 200.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_fonts/font = ExtResource( 4 )
step = 1.0
value = 50.0

[connection signal="tween_completed" from="Movement_Tween" to="." method="_on_Movement_Tween_tween_completed"]
[connection signal="input_event" from="Character_Kinematic_Body" to="." method="_on_Character_Kinematic_Body_input_event"]
[connection signal="mouse_entered" from="Character_Kinematic_Body" to="." method="show_character_info"]
[connection signal="mouse_exited" from="Character_Kinematic_Body" to="." method="hide_character_info"]
